add artifacts buildspec

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,3 +12,8 @@ phases:
   build:
     commands:
       - aws cloudformation package --template-file cfn-template.yaml --output-template-file packaged.yaml --s3-bucket $DEPLOYMENT_BUCKET
+
+artifacts:
+  discard-paths: no
+  files: 
+    - '**/*'
