ajuste cfn template

--- a/cfn-template.yaml
+++ b/cfn-template.yaml
@@ -9,6 +9,7 @@ Resources:
       Runtime: nodejs14.x
       Handler: index.handler
       AutoPublishAlias: alias
-      DeploymentPreference: AllAtOnce
+      DeploymentPreference:
+        Type: AllAtOnce
       MemorySize: 128
       Role: arn:aws:iam::761774289685:role/service-role/francoLambda-role-78w9501k
